# bobbin-cli

./: CHANGELOG  Cargo.toml  FIRMWARE.md  LICENSE-APACHE  LICENSE-MIT  README.md
src/: app.rs  blackmagic.rs  bobbin_config.rs  builder.rs  cargo_config.rs  check.rs  cmd.rs  config.rs  console.rs  debugger.rs  device.rs  ioreg.rs  loader.rs  main.rs  printer.rs  sysfs.rs
src/bobbin/: lib.rs
src/stlink/: chip_ids.rs  constants.rs  mod.rs  util.rs
